--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ main{
 }
 .slideCon{
     width: 500px;
-    height: 500px;
+    min-height: 500px;
     background-color: #4747d734;
     display: flex;
     flex-direction: column;
